# auto-writer

./: .gitignore  LICENSE  README.en.md  README.md  config.yml  discussion.md  docker-compose.dev.yml  docker-compose.yml  reasonix.toml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  run_desktop.py
backend/app/: __init__.py  bootstrap.py  database.py  frontend.py  launcher.py  main.py  schemas.py
backend/app/core/: __init__.py  build_info.py  config.py  logging.py  paths.py
backend/app/models/: __init__.py
backend/app/prompts/: __init__.py  formatting.py  loader.py
backend/app/prompts/templates/en/blocks/: chat_context.j2  references.j2  review_context.j2  work_info.j2
backend/app/prompts/templates/en/chat/: quote_user.j2
backend/app/prompts/templates/en/system/: default.j2
backend/app/prompts/templates/en/tasks/: chapter_generation.j2  draft_requirements.j2  recap.j2  review_instruction.j2  rewrite.j2  stage_generation.j2
backend/app/prompts/templates/zh/blocks/: chat_context.j2  references.j2  review_context.j2  work_info.j2
backend/app/prompts/templates/zh/chat/: quote_user.j2
backend/app/prompts/templates/zh/system/: default.j2
backend/app/prompts/templates/zh/tasks/: chapter_generation.j2  draft_requirements.j2  (+4 more)
backend/app/routers/: __init__.py  chapters.py  export.py  health.py  inspirations.py  llm.py  outline.py  plot_items.py  review.py  scenes.py  series.py  settings.py  stories.py  structures.py  works.py  world.py  worldbuilding.py  writing.py
backend/app/services/: __init__.py  assistant_conversation_service.py  chat_service.py  export_service.py  generation_context.py  llm_service.py  llm_settings.py  outline_service.py  prompts.py  prompts_i18n.py  references.py  seed.py  settings_service.py  snapshot_service.py  story_structure_i18n.py  work_stats.py  writing_service.py  yaml_export.py
backend/tests/: conftest.py  test_assistant_chat.py  test_cascade.py  test_desktop.py  test_export_api.py  test_inspirations_api.py  test_llm_service.py  test_llm_settings.py  test_locale.py  test_outline_api.py  test_paths.py  test_prompt_templates.py  test_prompts.py  test_references.py  test_review_api.py  test_seed.py  test_settings_api.py  test_story_structure_i18n.py  test_work_stats.py  test_works_api.py  test_worldbuilding_api.py  test_writing_api.py  test_writing_service.py
(+151 files in other folders)
