[project]
name = "auto-writer-backend"
version = "0.1.0"
description = "FastAPI backend for the Auto-Writer novel writing assistant."
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "loguru>=0.7.3",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
auto-writer = "app.launcher:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
